--- a/package.json
+++ b/package.json
@@ -31,6 +31,12 @@
     "webpack": "^2.2.0"
   },
   "dependencies": {
-    "extract-text-webpack-plugin": "^2.1.0"
+    "extract-text-webpack-plugin": "^2.1.0",
+    "jquery": "^3.2.1"
+  },
+   "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
