--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "webpack": "^2.2.0"
   },
   "dependencies": {
+    "chart.js": "^2.5.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "jquery": "^3.2.1"
   },
-   "babel": {
+  "babel": {
     "presets": [
       "es2015"
     ]
